test/files/neg/t0673.check
Test.scala:2: error: object JavaClass.InnerClass is not a value
  val x = JavaClass.InnerClass
                    ^
one error found
